--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailActivity">
+    tools:context=".DetailActivity3">
 
     <include
         android:id="@+id/toolbar"
@@ -57,6 +57,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
+        android:backgroundTint="#FF5722"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:shape="oval"
@@ -84,6 +85,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
+        android:backgroundTint="#FF5722"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:shape="oval"
