--- a/app/src/main/res/layout/activity_panier.xml
+++ b/app/src/main/res/layout/activity_panier.xml
@@ -24,7 +24,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
-        android:text="Passer la commande"
+        android:text="Valider la commande"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
