--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -41,6 +41,7 @@
             android:layout_height="50dp"
             android:layout_gravity="end"
             android:layout_marginEnd="5dp"
+            android:backgroundTint="#FF5722"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -54,7 +55,7 @@
             android:layout_height="15dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
-            android:background="#FF0000"
+            android:background="#FF5722"
             android:gravity="center"
             android:textColor="#FFFFFF"
             android:textSize="10sp"
